--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="Feedback.css" rel="stylesheet" type="text/css" />
+  <link href="feedback.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
