Base code for hardware info added

--- a/hardwareinfo.html
+++ b/hardwareinfo.html
@@ -43,6 +43,26 @@
 
 
     <div class = "background">
+        <div>
+            <h1>CPU</h1>
+            The CPU is the brain of a computer, it contains all the circuitry needed to process input, store data, 
+            and output results. It manages the processing of data, which is basically how fast your computer will perform.
+
+            <h1>GPU</h1>
+            The GPU a specialized processor designed to accelerate graphics rendering. making them useful for machine learning, 
+            video editing, and mostly on gaming purposes(Good grphics and such). If you want a gaming pc fit to handle the most 
+            powerful games at high graphics, then you need a good GPU!
+
+            <h1>Memory</h1>
+            The memory is the holding place for data a computer needs to reach quickly. It's where information is stored for immediate use. 
+            Without it, a computer would not be able to function properly. The bigger your RAM the more tabs you can open on a pc and the faster your speed will be.
+
+            <h1>Hard Drive</h1>
+            Hard drives store operating systems, software programs and other files using magnetic disks. It is where all your files and downloaded applications/softwaree go to
+            The bigger the hard disk, the more storage you will have.
+            
+        </div>
+    
     </div>
 </body>
 
