Recommendations code and a little css added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         </section>
       </li>
     </ul>
+  </div>
 
+  <div class = "Cbackground">
     <ul class="flex-storage">
       <li class="flex-item">Feedback
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtxHdlqy5IzKrm67gpLAUTnWSy4bRivNcFvw&usqp=CAU">
