--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 
   <div class="navbar">
-    <a href="#home">Home</a>
-    <b href="#feedback">Feedback</b>
-    <b href="#how-to-build">How To Build</b>
+    <a href="index.html">Home</a>
+    <b href="feedback.html">Feedback</b>
+    <b href="HowToBuild.html">How To Build</b>
     <div class="drop">
       <button class="droppos">Recommended PC's
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="drop-content">
-        <a href="#working">Working PC</a>
-        <a href="#gaming">Gaming PC</a>
-        <a href="#hybrid">hybrid PC</a>
+        <a href="recommendations.html">Working PC</a>
+        <a href="recommendations.html">Gaming PC</a>
+        <a href="recommendations.html">hybrid PC</a>
       </div>
     </div>
 
@@ -34,10 +34,10 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="drop-content">
-        <a href="#C-P-U">CPU</a>
-        <a href="#G-P-U">GPU </a>
-        <a href="#memory">Memory</a>
-        <a href="#hard-drive">Hard Drive</a>
+        <a href="hardwareinfo.html">CPU</a>
+        <a href="hardwareinfo.html">GPU </a>
+        <a href="hardwareinfo.html">Memory</a>
+        <a href="hardwareinfo.html">Hard Drive</a>
       </div>
     </div>
 
