Hardware info css added, how to build css added

--- a/HowToBuild.html
+++ b/HowToBuild.html
@@ -46,33 +46,44 @@
 
     <div class = "background">
 
+      <div class="space"></div>
+
         <div class="title-storage">
             <div class="title-item">How to Build!
-                <div>
+                <div class="title-section">
                     Want to know how to build your own PC via video or step by step? Find out here!
                 </div>
                 
             </div>
         </div>
 
-        <div>
-          REMEMBER to do this with supervision if you are young regardless if you are watching the video of doing the step by step process
+        <div class="space"></div>
+
+        <div class="title-storage">
+          <div class="title-item">
+            <div class="title-section">
+              REMEMBER to do this with supervision if you are young regardless if you are watching the video of doing the step by step process
+            </div>
+          </div>
+          
         </div>
 
-        <div>
+        <div class="vid-pos">
           <video width="600" height="400" controls>
             <source src="https://www.youtube.com/watch?v=PXaLc9AYIcg" type="video/mp4">
-            <source src="https://www.youtube.com/watch?v=PXaLc9AYIcg" type="video/ogg">
-          Your browser does not support the video tag.
+            Video credit: TechSource on Youtube
           </video>
         </div>
 
-        <div>
+        <div class="space"></div>
+
+        <div class="info-storage">
+          <div class="info-item">
           Step-By-Step process:
           <ul>
             Remember that even
             <li>
-              Step 1:
+              <div>Step 1:</div><br>
               Remove the back screws on the Pc casing and take the side cover off
             </li>
 
