--- a/recommendations.html
+++ b/recommendations.html
@@ -61,7 +61,7 @@
                           Model: <br>
                           Lenovo Legion Tower 7i Gaming Desktop Computer<br> 
                           <br>
-                          High steam for great performance! Fit for heavy and graphic intensive games!
+                          High steam for great performance! Fit for heavy and graphic intensive games!<br>
                           <br>
                           Regular price: $2,399.99
                         </section>
@@ -92,7 +92,7 @@
                       Model: <br>
                       Dell Inspiron Desktop<br>
                       <br>
-                      Cool, long lasting and efficient! Fit for an avid worker and budgeted for one too!
+                      Cool, long lasting and efficient! Fit for an avid worker and budgeted for one too!<br>
                       <br>
                       Regular price: $699.99
                     </section>
@@ -125,7 +125,7 @@
                   Model:<br>
                   HP Pavilion TP01-3070 Desktop Computer<br>
                   <br>
-                  All rounded and a great budget choice for all! Play regular games at mostly no performance issues
+                  All rounded and a great budget choice for all! Play regular games at mostly no performance issues<br>
                   <br>
                   Regular price: $919.99
                 </section>
