How to build Css added and Video added

--- a/HowToBuild.html
+++ b/HowToBuild.html
@@ -68,27 +68,26 @@
           
         </div>
 
+        <div class="space"></div>
+
         <div class="vid-pos">
-          <video width="600" height="400" controls>
-            <source src="https://www.youtube.com/watch?v=PXaLc9AYIcg" type="video/mp4">
-            Video credit: TechSource on Youtube
-          </video>
+          <iframe width="1600" height="900" src="https://www.youtube.com/embed/PXaLc9AYIcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <p style = "text-align: center; font-size: 20px;" >Video credit: TechSource on Youtube</p>
 
         <div class="space"></div>
 
         <div class="info-storage">
           <div class="info-item">
-          Step-By-Step process:
+          <div class = "start-pos"> Step-By-Step process: </div>
           <ul>
-            Remember that even
             <li>
-              <div>Step 1:</div><br>
+              <div class = "info-pos">Step 1:</div>
               Remove the back screws on the Pc casing and take the side cover off
             </li>
 
             <li>
-              Step 2:
+              <div class = "info-pos">Step 2:</div>
               Screw the motherboard standoffs into the case
 
               If applicable, screw off and take out the rear IO plate and replace it with motherboard IO plate
@@ -97,21 +96,21 @@
             </li>
 
             <li>
-              Step 3:
+              <div class = "info-pos">Step 3:</div>
               Locate the CPU socket holder, lift up the latch to open the socket cover
 
               By lining up the triangle symbols on the CPU chip itself with the symbols on the motherboard, carefully install the CPU
             </li>
 
             <li>
-              Step 4:
+              <div class = "info-pos">Step 4:</div>
               Install the CPU cooling fan next by seating and fixing the fan in position
 
               Remember to plug in the power cable of the cooler fan into the motherboard controller
             </li>
 
             <li>
-              Step 5:
+              <div class = "info-pos">Step 5:</div>
               To mount the power supply, find the case mounting points and plug in the LARGEST abling connector from the power supply cabling to the motherboard
               power connector
 
@@ -119,32 +118,32 @@
             </li>
 
             <li>
-              Step 6:
+              <div class = "info-pos">Step 6:</div>
               Now you will mount the memory, find and press the 2 clips at both ends of the RAM mount slots and have the RAM stick line up with it.
               Press firmly and make sure the tabs automatically latch onto the stick to confirm the installation. Install the rest of your RAM sticks (if needed)
             </li>
 
             <li>
-              Step 7:
+              <div class = "info-pos">Step 7:</div>
               To install your GPU, first remove the expansion slot covers on the rear side of your case, it will be used to hold your graphics card.
               Next, install the GPU at the <bold>Lower</bold> half of the motherboard and line it up properly, make sure to screw in the screws to hold the GPU in place.
             </li>
 
             <li>
-              Step 8:
+              <div class = "info-pos">Step 8:</div>
               Before mounting your storage devices, make sure that if your storage is a 2.5" size and not a 3"5 size, try to get aan adaptor plate to mount the storage.
               Mount the storage devices into the drive bays located beside the CPU and motherboard. Fix it with screws from the cases frame into the special case mounting holes.
               Next, connect the drive via the SATA cable to the motherboard. Followed by the power cabling to the storage drive.
             </li>
 
             <li>
-              Step 9: (OPTIONAL)
+              <div class = "info-pos">Step 9: (OPTIONAL)</div> 
               You will now mount the optical drives.
               Remove any front panels from the casing first, 
             </li>
 
             <li>
-              Step 10:
+              <div class = "info-pos">Step 10:</div>
               Connecting the front panel connectors and case fans may be complicated (recommend watching the video here), note that if your PC has already installed the case fans, dont need the re-install any
               Case fans: (optional)
               Mount your case fans into your case using the screws/clips provided and then connect the case fan power connectors to the multiple fan headers located at different parts of the motherboard.
@@ -156,16 +155,18 @@
             </li>
 
             <li>
-              Step 11:
+              <div class = "info-pos">Step 11:</div>
               Congradulations, you have built your PC!
               Just place the side cover back on and screw it back into place. Finally, connect outer devices such as mouse, monitors, keyboards etc.
             </li>
 
           </ul>
+
+
         </div>
     </div>
 
-
+    <div class="space"></div>
 
 
 
