--- a/index.html
+++ b/index.html
@@ -16,18 +16,6 @@
 
   <div class="navbar">
     <a href="index.html">Home</a>
-    <b href="feedback.html">Feedback</b>
-    <b href="HowToBuild.html">How To Build</b>
-    <div class="drop">
-      <button class="droppos">Recommended PC's
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="drop-content">
-        <a href="recommendations.html">Working PC</a>
-        <a href="recommendations.html">Gaming PC</a>
-        <a href="recommendations.html">hybrid PC</a>
-      </div>
-    </div>
 
     <div class="drop">
       <button class="droppos">Hardware Information
@@ -42,7 +30,20 @@
     </div>
 
 
+    <div class="drop">
+      <button class="droppos">Recommended PC's
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="drop-content">
+        <a href="recommendations.html">Working PC</a>
+        <a href="recommendations.html">Gaming PC</a>
+        <a href="recommendations.html">hybrid PC</a>
+      </div>
+    </div>
 
+
+    <a href="HowToBuild.html">How To Build</a>
+    <a href="feedback.html">Feedback</a>
   </div>
   <div class="Tbackground">
     <h1 class="title"> Find your Perfect PC here!</h1>
