Nav bar fully changed

--- a/feedback.html
+++ b/feedback.html
@@ -9,6 +9,40 @@
 </head>
 
 <body>
+  <div class="navbar">
+    <a href="index.html">Home</a>
+
+    <div class="drop">
+      <button class="droppos">Hardware Information
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="drop-content">
+        <a href="hardwareinfo.html">CPU</a>
+        <a href="hardwareinfo.html">GPU </a>
+        <a href="hardwareinfo.html">Memory</a>
+        <a href="hardwareinfo.html">Hard Drive</a>
+      </div>
+    </div>
+
+
+    <div class="drop">
+      <button class="droppos">Recommended PC's
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="drop-content">
+        <a href="recommendations.html">Working PC</a>
+        <a href="recommendations.html">Gaming PC</a>
+        <a href="recommendations.html">hybrid PC</a>
+      </div>
+    </div>
+
+
+    <a href="HowToBuild.html">How To Build</a>
+    <a href="feedback.html">Feedback</a>
+  </div>
+
+
+
   <div class= "background">
     <h1>GIVE US YOUR FEEDBACK!</h1>
 
