--- a/hardwareinfo.html
+++ b/hardwareinfo.html
@@ -13,31 +13,35 @@
 <body>
 
   <div class="navbar">
-      <a href="#home">Home</a>
-      <b href="#feedback">Feedback</b>
-      <b href="#how-to-build">How To Build</b>
-      <div class="drop">
-        <button class="droppos">Recommended PC's
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="drop-content">
-          <a href="#working">Working PC</a>
-          <a href="#gaming">Gaming PC</a>
-          <a href="#hybrid">hybrid PC</a>
-        </div>
+    <a href="index.html">Home</a>
+
+    <div class="drop">
+      <button class="droppos">Hardware Information
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="drop-content">
+        <a href="hardwareinfo.html">CPU</a>
+        <a href="hardwareinfo.html">GPU </a>
+        <a href="hardwareinfo.html">Memory</a>
+        <a href="hardwareinfo.html">Hard Drive</a>
       </div>
-  
-      <div class="drop">
-        <button class="droppos">Hardware Information
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="drop-content">
-          <a href="#C-P-U">CPU</a>
-          <a href="#G-P-U">GPU </a>
-          <a href="#memory">Memory</a>
-          <a href="#hard-drive">Hard Drive</a>
-        </div>
+    </div>
+
+
+    <div class="drop">
+      <button class="droppos">Recommended PC's
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="drop-content">
+        <a href="recommendations.html">Working PC</a>
+        <a href="recommendations.html">Gaming PC</a>
+        <a href="recommendations.html">hybrid PC</a>
       </div>
+    </div>
+
+
+    <a href="HowToBuild.html">How To Build</a>
+    <a href="feedback.html">Feedback</a>
   </div>
 
   <div class = "background">
