Feedback Css basis done V2

--- a/feedback.html
+++ b/feedback.html
@@ -42,56 +42,67 @@
   </div>
 
 
+  <div class = "background">
 
-  <div class= "background">
-    <h1>GIVE US YOUR FEEDBACK!</h1>
+    <div class = "space" ></div>
 
-
-    <form>
-      <div class="poster cover">
-        <label for="Name">Name:</label><br>
-        <input type="text" id="Name" name="name"><br>
-        <label for="Email">Email:</label><br>
-        <input type="text" id="Email" name="Email"><br>
+        <div class="title-storage">
+            <div class="title-item">Give us your feedback!</div>
+        </div>
 
 
 
-        <h3>Was the website easy to navigate around?</h3>
-        <input type="radio" id="Easy to use" name="very easy" value="V.Ez">
-        <label for="very easy">Very easy to use</label><br>
-        <input type="radio" id="mod easy" name="easy" value="Ez">
-        <label for="mod easy">Moderately easy to use</label><br>
-        <input type="radio" id="javascript" name="not easy" value="N.Ez">
-        <label for="not easy">Not easy to use</label>
+        <div class="space"></div>
+
+        <div class="info-storage">
+          <div class="info-item">
+          <div class = "start-pos"> Step-By-Step process: </div>
+            <form>
+              <div class="poster cover">
+                <label for="Name">Name:</label><br>
+                <input type="text" id="Name" name="name"><br>
+                <label for="Email">Email:</label><br>
+                <input type="text" id="Email" name="Email"><br>
 
 
 
-        <h3>Was the information on this website useful?</h3>
-        <input type="radio" id="very useful" name="very useful" value="V.Ez">
-        <label for="html">Very Useful</label><br>
-        <input type="radio" id="Useful" name="Useful" value="Use">
-        <label for="Useful">Useful</label><br>
-        <input type="radio" id="not useful" name="not useful" value="N.Use">
-        <label for="not useful">Not Useful</label><br>
+                <h3>Was the website easy to navigate around?</h3>
+                <input type="radio" id="Easy to use" name="very easy" value="V.Ez">
+                <label for="very easy">Very easy to use</label><br>
+                <input type="radio" id="mod easy" name="easy" value="Ez">
+                <label for="mod easy">Moderately easy to use</label><br>
+                <input type="radio" id="javascript" name="not easy" value="N.Ez">
+                <label for="not easy">Not easy to use</label>
 
 
 
-        <h3>What features did you use in this website?</h3>
-        <input type="checkbox" id="Event 1" name="Event 1" value="Event 1">
-        <label for="Event 1"> Learning computer hardware</label><br>
-        <input type="checkbox" id="Event 2" name="Event 2" value="Event 2">
-        <label for="Event 2"> I have a car</label><br>
-        <input type="checkbox" id="Event 3" name="Event 3" value="Event 3">
-        <label for="Event 3"> I have a boat</label>
-
-        <h3>If any, do you have any improvements or feature you would like to see added?</h3>
-        <textarea rows="5" cols="30"></textarea><br>
+                <h3>Was the information on this website useful?</h3>
+                <input type="radio" id="very useful" name="very useful" value="V.Ez">
+                <label for="html">Very Useful</label><br>
+                <input type="radio" id="Useful" name="Useful" value="Use">
+                <label for="Useful">Useful</label><br>
+                <input type="radio" id="not useful" name="not useful" value="N.Use">
+                <label for="not useful">Not Useful</label><br>
 
 
 
-        <input type="submit" value="Submit">
-      </div>
-  </div>
+                <h3>What features did you use in this website?</h3>
+                <input type="checkbox" id="Event 1" name="Event 1" value="Event 1">
+                <label for="Event 1"> Learning computer hardware</label><br>
+                <input type="checkbox" id="Event 2" name="Event 2" value="Event 2">
+                <label for="Event 2"> I have a car</label><br>
+                <input type="checkbox" id="Event 3" name="Event 3" value="Event 3">
+                <label for="Event 3"> I have a boat</label>
+
+                <h3>If any, do you have any improvements or feature you would like to see added?</h3>
+                <textarea rows="5" cols="30"></textarea><br>
+
+
+
+                <input type="submit" value="Submit">
+              </div>
+          </div>
+        </div>  
 
 
   </form>
