technologies used added to readme.

--- a/feedback.html
+++ b/feedback.html
@@ -56,17 +56,18 @@
 
         <div class="info-storage">
           <div class="info-item">
-          <div class = "start-pos"> Step-By-Step process: </div>
             <form>
-              <div class="poster cover">
+              <div class="credentials">
                 <label for="Name">Name:</label><br>
                 <input type="text" id="Name" name="name"><br>
                 <label for="Email">Email:</label><br>
                 <input type="text" id="Email" name="Email"><br>
+              </div>
 
 
-
+              <div>
                 <h3>Was the website easy to navigate around?</h3>
+
                 <input type="radio" id="Easy to use" name="very easy" value="V.Ez">
                 <label for="very easy">Very easy to use</label><br>
                 <input type="radio" id="mod easy" name="easy" value="Ez">
@@ -77,6 +78,7 @@
 
 
                 <h3>Was the information on this website useful?</h3>
+
                 <input type="radio" id="very useful" name="very useful" value="V.Ez">
                 <label for="html">Very Useful</label><br>
                 <input type="radio" id="Useful" name="Useful" value="Use">
@@ -87,6 +89,7 @@
 
 
                 <h3>What features did you use in this website?</h3>
+
                 <input type="checkbox" id="Event 1" name="Event 1" value="Event 1">
                 <label for="Event 1"> Learning computer hardware</label><br>
                 <input type="checkbox" id="Event 2" name="Event 2" value="Event 2">
@@ -95,7 +98,7 @@
                 <label for="Event 3"> I have a boat</label>
 
                 <h3>If any, do you have any improvements or feature you would like to see added?</h3>
-                <textarea rows="5" cols="30"></textarea><br>
+                <textarea rows="5" cols="100"></textarea><br>
 
 
 
@@ -106,13 +109,36 @@
 
 
   </form>
+
+  <div class = "space" ></div>
+
+
+
+  <footer class = "footer_container">
+    <div class = "footer_txt">
+      <div class = "footer_head footer-1">
+        <h2>Social Media</h2>
+        <a href = "Blog">Blog</a>
+        <a href = "Twitter">Twitter</a>
+        <a href = "Instagram">Instagram</a>
+        <a href = "FaceBook">FaceBook</a>
+        <a href = "LinkdIn">LinkdIn</a>
+      </div>
+  
+      <div class = "footer_head footer-2">
+        <h2>Others</h2>
+        <a href = "About-Us">About Us</a>
+        <a href = "Feedback">Feedback</a>
+        <a href = "Contact">Contact Us</a>
+      </div>
+    </div>
+  </footer>
+
+
+  
   <script src="script.js"></script>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
+
   <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
 </body>
 
