--- a/index.html
+++ b/index.html
@@ -13,37 +13,47 @@
 
 <body>
 
+  <div class="navbar"></div>
+    <div class="phone"></div>
+    <div class="phone"></div>
+    <div class="phone"></div>
+    <div class="phone"></div>
+    <div class="phone"></div>
+  </div>
+
 
   <div class="navbar">
-    <a href="index.html">Home</a>
+    <div class="block">
+      <a href="index.html">Home</a>
 
-    <div class="drop">
-      <button class="droppos">Hardware Information
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="drop-content">
-        <a href="hardwareinfo.html">CPU</a>
-        <a href="hardwareinfo.html">GPU </a>
-        <a href="hardwareinfo.html">Memory</a>
-        <a href="hardwareinfo.html">Hard Drive</a>
+      <div class="drop">
+        <button class="droppos">Hardware Information
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="drop-content">
+          <a href="hardwareinfo.html">CPU</a>
+          <a href="hardwareinfo.html">GPU </a>
+          <a href="hardwareinfo.html">Memory</a>
+          <a href="hardwareinfo.html">Hard Drive</a>
+        </div>
       </div>
-    </div>
 
 
-    <div class="drop">
-      <button class="droppos">Recommended PC's
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="drop-content">
-        <a href="recommendations.html">Working PC</a>
-        <a href="recommendations.html">Gaming PC</a>
-        <a href="recommendations.html">hybrid PC</a>
+      <div class="drop">
+        <button class="droppos">Recommended PC's
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="drop-content">
+          <a href="recommendations.html">Working PC</a>
+          <a href="recommendations.html">Gaming PC</a>
+          <a href="recommendations.html">hybrid PC</a>
+        </div>
       </div>
+
+
+      <a href="HowToBuild.html">How To Build</a>
+      <a href="feedback.html">Feedback</a>
     </div>
-
-
-    <a href="HowToBuild.html">How To Build</a>
-    <a href="feedback.html">Feedback</a>
   </div>
   <div class="Tbackground">
     <h1 class="title"> Find your Perfect PC here!</h1>
