--- a/index.html
+++ b/index.html
@@ -99,12 +99,7 @@
         </section>
       </li>
     </ul>
-    <script src="script.js">
-      navbar = document.querySelector(".navbar");
-      navbar.onclick = function() {
-        navBar = document.querySelector(".nav-bar");
-        navBar.classList.toggle("active")
-      }
+    <script src="index.js">
     </script>
     <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
   </div>
