all Js scripts and pages fitted with new nav bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <title>replit</title>
   <link href="index.css" rel="stylesheet" type="text/css" />
+
+  <script src="index.js"></script>
 </head>
 
 
@@ -99,9 +101,7 @@
         </section>
       </li>
     </ul>
-    <script src="index.js">
-    </script>
-    <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
+
   </div>
 </body>
 
