--- a/recommendations.html
+++ b/recommendations.html
@@ -7,42 +7,51 @@
 
   <title>replit</title>
   <link href="recommendations.css" rel="stylesheet" type="text/css" />
+
+  <script src="recommendations.js"></script>
 </head>
 
 
 <body>
 
-  <div class="navbar">
-    <a href="index.html">Home</a>
-
-    <div class="drop">
-      <button class="droppos">Hardware Information
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="drop-content">
-        <a href="hardwareinfo.html">CPU</a>
-        <a href="hardwareinfo.html">GPU </a>
-        <a href="hardwareinfo.html">Memory</a>
-        <a href="hardwareinfo.html">Hard Drive</a>
-      </div>
+  <header>
+    <div class="navbar-phone"></div>
+      <div class="phone"></div>
+      <div class="phone"></div>
+      <div class="phone"></div>
+      <div class="phone"></div>
+      <div class="phone"></div>
     </div>
 
 
-    <div class="drop">
-      <button class="droppos">Recommended PC's
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="drop-content">
-        <a href="recommendations.html">Working PC</a>
-        <a href="recommendations.html">Gaming PC</a>
-        <a href="recommendations.html">hybrid PC</a>
+    <div class="navbar">
+      <div class="block">
+
+
+        <div class="block-info">
+          <a href="index.html">Home</a>
+        </div>
+
+        <div class="block-info">
+          <a href="hardwareinfo.html">Hardware Information</a>
+        </div>
+
+        <div class="block-info">
+          <a href="recommendations.html">Recommendations</a>
+        </div>
+
+        <div class="block-info">
+          <a href="HowToBuild.html">How To Build</a>
+        </div>
+
+        <div class="block-info">
+          <a href="feedback.html">Feedback</a>
+        </div>
+
+        
       </div>
     </div>
-
-
-    <a href="HowToBuild.html">How To Build</a>
-    <a href="feedback.html">Feedback</a>
-  </div>
+  </header>
 
     <div class = "background">
 
