All HTML final changes and polish

--- a/feedback.html
+++ b/feedback.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+
   <header>
+    <!--For nav-bar phone formatting baseline-->
     <div class="navbar-phone"></div>
       <div class="phone"></div>
       <div class="phone"></div>
@@ -18,7 +20,7 @@
       <div class="phone"></div>
     </div>
 
-
+    <!--Actual navbar-->
     <div class="navbar">
       <div class="block">
 
@@ -48,7 +50,7 @@
     </div>
   </header>
 
-
+  <!--actual content-->
   <div class = "background">
 
     <div class = "space" ></div>
@@ -63,6 +65,7 @@
 
         <div class="info-storage">
           <div class="info-item">
+            <!--Form starts here-->
             <form>
               <div class="credentials">
                 <label for="Name">Name:</label><br>
@@ -119,34 +122,33 @@
 
   <div class = "space" ></div>
 
-
-
-  <footer class = "footer_container">
-    <div class = "footer_txt">
-      <div class = "footer_head footer-1">
-        <h2>Social Media</h2>
-        <a href = "Blog">Blog</a>
-        <a href = "Twitter">Twitter</a>
-        <a href = "Instagram">Instagram</a>
-        <a href = "FaceBook">FaceBook</a>
-        <a href = "LinkdIn">LinkdIn</a>
-      </div>
-  
-      <div class = "footer_head footer-2">
-        <h2>Others</h2>
-        <a href = "About-Us">About Us</a>
-        <a href = "Feedback">Feedback</a>
-        <a href = "Contact">Contact Us</a>
-      </div>
-    </div>
-  </footer>
-
-
-  
-  <script src="script.js"></script>
-
-
-  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
 </body>
+
+
+<!--Footer-->
+<footer class = "footer_container">
+  <div class = "footer_txt">
+    <div class = "footer_head footer-1">
+      <h2>Social Media</h2>
+      <a href = "Blog">Blog</a>
+      <a href = "Twitter">Twitter</a>
+      <a href = "Instagram">Instagram</a>
+      <a href = "FaceBook">FaceBook</a>
+      <a href = "LinkdIn">LinkdIn</a>
+    </div>
+  
+    <div class = "footer_head footer-2">
+      <h2>Others</h2>
+      <a href = "About-Us">About Us</a>
+      <a href = "Feedback">Feedback</a>
+      <a href = "Contact">Contact Us</a>
+    </div>
+  </div>
+</footer>
+
+
+  
+
+
 
 </html>
