--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 
 <body>
+
   <header>
+    <!--For nav-bar phone formatting baseline-->
     <div class="navbar-phone"></div>
       <div class="phone"></div>
       <div class="phone"></div>
@@ -23,7 +25,7 @@
       <div class="phone"></div>
     </div>
 
-
+    <!--Actual navbar-->
     <div class="navbar">
       <div class="block">
 
@@ -57,7 +59,7 @@
 
 
 
-
+  <!--index main content-->
   <div class="Tbackground">
     <h1 class="title"> Find your Perfect PC here at Find-A-PC!</h1>
   </div>
@@ -69,6 +71,7 @@
 
     <h1 class="big"> Go explore these! </h1>
 
+    <!--Where the 4 boxes are being held-->
     <ul class="flex-storage">
       <li class="flex-item" onclick="window.location.href='hardwareinfo.html'">Hardware Information
         <img
@@ -107,7 +110,7 @@
 
 
 
-
+<!--Footer-->
 <footer class = "footer_container">
   <div class = "footer_txt">
     <div class = "footer_head footer-1">
