--- a/recommendations.html
+++ b/recommendations.html
@@ -15,6 +15,7 @@
 <body>
 
   <header>
+    <!--For nav-bar phone formatting baseline-->
     <div class="navbar-phone"></div>
       <div class="phone"></div>
       <div class="phone"></div>
@@ -23,7 +24,7 @@
       <div class="phone"></div>
     </div>
 
-
+    <!--Actual navbar-->
     <div class="navbar">
       <div class="block">
 
@@ -53,6 +54,8 @@
     </div>
   </header>
 
+
+    <!--Main content-->
     <div class = "background">
 
         <div class = "space" ></div>
@@ -64,7 +67,8 @@
 
 
         <div class = "space" ></div>
-        
+
+        <!--Different section formatting for each PC-->
         <div class = "back-block">
             <div class="flex-storage">
                 <div class="flex-item">
@@ -165,6 +169,7 @@
     </div>
 </body>
 
+<!--Footer-->
 <footer class = "footer_container">
     <div class = "footer_txt">
       <div class = "footer_head footer-1">
