polishing and comments

--- a/HowToBuild.html
+++ b/HowToBuild.html
@@ -84,7 +84,7 @@
 
         <!--Video location-->
         <div class="vid-pos">
-          <iframe width="1600" height="900" src="https://www.youtube.com/embed/PXaLc9AYIcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="1600" height="900" src="https://www.youtube.com/embed/PXaLc9AYIcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Video not available"></iframe>
         </div>
         <p style = "text-align: center; font-size: 20px;" >Video credit: TechSource on Youtube</p>
 
