--- a/recommendations.html
+++ b/recommendations.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="img_pos">
                         <img
-                        src="https://static.bhphoto.com/images/multiple_images/images500x500/1660560485_IMG_1816107.jpg">
+                        src="https://static.bhphoto.com/images/multiple_images/images500x500/1660560485_IMG_1816107.jpg"alt="image not available">
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                   </div>
 
                   <div class="img_pos">
-                    <img src="https://i.dell.com/is/image/DellContent/content/dam/ss2/product-images/dell-client-products/desktops/inspiron-desktops/inspiron-3910-desktop/media-gallery/updated/desktop-inspiron-3910-no-odd-blue-gallery-2.psd?fmt=png-alpha&pscan=auto&scl=1&hei=402&wid=301&qlt=100,1&resMode=sharp2&size=301,402&chrss=full">
+                    <img src="https://i.dell.com/is/image/DellContent/content/dam/ss2/product-images/dell-client-products/desktops/inspiron-desktops/inspiron-3910-desktop/media-gallery/updated/desktop-inspiron-3910-no-odd-blue-gallery-2.psd?fmt=png-alpha&pscan=auto&scl=1&hei=402&wid=301&qlt=100,1&resMode=sharp2&size=301,402&chrss=full"alt="image not available">
                   </div>
 
 
@@ -157,7 +157,7 @@
               </div>
 
               <div class="img_pos">
-                <img src="https://www.bhphotovideo.com/cdn-cgi/image/format=auto,fit=scale-down,width=500,quality=95/https://www.bhphotovideo.com/images/images500x500/hp_577d7aa_aba_pavilion_dt_i7_12700_12_512_ssd_1651681230_1700161.jpg">
+                <img src="https://www.bhphotovideo.com/cdn-cgi/image/format=auto,fit=scale-down,width=500,quality=95/https://www.bhphotovideo.com/images/images500x500/hp_577d7aa_aba_pavilion_dt_i7_12700_12_512_ssd_1651681230_1700161.jpg"alt="image not available">
               </div>
 
             </div>
